--- a/demo/src/styles/index.scss
+++ b/demo/src/styles/index.scss
@@ -4,3 +4,40 @@ body {
   color: $body-color;
   font-family: sans-serif;
 }
+
+#logo {
+  display: block;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+
+#left {
+  width: 20%;
+  float: left;
+  justify-content: center;
+  align-items: center;
+}
+
+#upload {
+  width: 80%;
+  margin-left: 10%;
+}
+
+h1 {
+  text-align: center;
+}
+
+#output {
+  margin-top: 30px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+#input {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
