Implement file uploading

--- a/demo/src/styles/index.scss
+++ b/demo/src/styles/index.scss
@@ -20,6 +20,11 @@ body {
   align-items: center;
 }
 
+#fin-label {
+  width: 80%;
+  margin-left: 10%;
+}
+
 .btn {
   width: 80%;
   margin-left: 10%;
