--- a/demo/src/styles/index.scss
+++ b/demo/src/styles/index.scss
@@ -15,20 +15,33 @@ body {
 
 #left {
   width: 20%;
+  margin-left: 1%;
+  height: 98vh;
   float: left;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+#right {
+  margin-left: 22%;
+  margin-right: 1%;
+  display: flex;
+  flex-direction: column;
+  height: 98vh;
+}
+
 #fin-label {
-  width: 80%;
-  margin-left: 10%;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 10px;
 }
 
 .btn {
-  width: 80%;
-  margin-left: 10%;
-  margin-bottom: 5px;
+  width: 100%;
+  min-height: 30px;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -36,14 +49,14 @@ h1 {
 }
 
 #output {
-  margin-top: 30px;
+  margin-top: 20px;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
 }
 
 #input {
+  margin-right: 20px;
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
 }
